--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URL="mongodb+srv://sameekshthakur1457:s1h2i3b4b5u6@cluster0.0vft3ox.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL="mongodb+srv://sameekshthakur1457:s1h2i3b4b5u6@maincluster.ds8subk.mongodb.net/?retryWrites=true&w=majority&appName=mainCluster"
 JWT_SECRET="8hEnPGeoBqGUT6zksxt4G95gW+uMdzwe7EVaRnp0xRI="
